--- a/.github/workflows/readme_updater.yml
+++ b/.github/workflows/readme_updater.yml
@@ -17,7 +17,8 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Run python script
-        run: python replace_tag.py
+        run: |
+          python replace_tag.py
         
       - name: pull-request
         uses: repo-sync/pull-request@v2
@@ -27,8 +28,8 @@ jobs:
 
       - name: commit
         run: |
-          git config --global user.email redraino.o.o.o.o@gmail.com
-          git config --global user.name redrain0o0
+          git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git config --global user.name "github-actions[bot]"
           git add .
           git commit -m "README update Automation" -a
           
