--- a/.github/workflows/readme_updater.yml
+++ b/.github/workflows/readme_updater.yml
@@ -29,7 +29,7 @@ jobs:
 
       - name: git stuff
         run: |
-          git config --global user.email "redraino.o.o.o.o@gmail.com"
-          git config --global user.name "redrain0o0"
+          git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git config --global user.name "github-actions[bot]"
           git commit -am "README update Automation"
           git push
