--- a/.github/workflows/readme_updater.yml
+++ b/.github/workflows/readme_updater.yml
@@ -31,5 +31,6 @@ jobs:
         run: |
           git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git config --global user.name "github-actions[bot]"
+          git pull
           git commit -am "README update Automation"
           git push
