--- a/.github/workflows/readme_updater.yml
+++ b/.github/workflows/readme_updater.yml
@@ -25,7 +25,7 @@ jobs:
         run: python -m pip install --upgrade pip requests
 
       - name: Execute Python script # Run the run.py to get the latest data
-        run: python update_age.py
+        run: python update_readme.py
 
       - name: git stuff
         run: |
